src/fhiclcpp/fhiclcpp/test/testFiles/fail/include2_fail.fcl
#===========================================
# Testing Incorrect #include syntax
# What's Wrong: No quotes around filename
#===========================================

#include filename.ext
